# Pz5

./: NN.py  NN_1.py  NN_2.py  pyproject.toml
