[tool.poetry]
name = "pz5"
version = "0.1.0"
description = ""
authors = ["anatoly <t.vlasov23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
torchvision = "^0.16.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
mpld3 = "^0.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
